AG-13351 - Fix table examples section layout issues

--- a/documentation/ag-grid-docs/src/pages-styles/react-table.module.scss
+++ b/documentation/ag-grid-docs/src/pages-styles/react-table.module.scss
@@ -307,39 +307,36 @@ div.sectionContent:nth-of-type(4n + 3) {
     fill: var(--color-link) !important;
 }
 
-.examplesSectionexamplesContainer {
+.examplesSectionContainer {
+    --horizontal-gap: #{$spacing-size-4};
+
     display: flex;
     flex-direction: column;
-    align-items: center;
-}
+    gap: $spacing-size-8 var(--horizontal-gap);
 
-.examplesSectioncardsContainer {
-    display: flex;
-    overflow-x: scroll !important;
-    gap: $spacing-size-4;
-    padding-bottom: $spacing-size-6;
-    width: 100%;
+    @media screen and (min-width: $breakpoint-landing-page-small) {
+        flex-direction: row;
+    }
 
-    @media screen and (max-width: $breakpoint-landing-page-medium) {
-        flex-direction: column;
+    @media screen and (min-width: $breakpoint-landing-page-small) and (max-width: $breakpoint-landing-page-medium) {
+        flex-wrap: wrap;
     }
 }
 
-.examplesSectioncard {
-    flex: 1;
-    display: flex;
-    min-width: 300px;
-    margin: 0 10px;
+.examplesSectionCard {
     border-radius: var(--radius-md);
     background: var(--color-gray-50);
-    flex-direction: column;
 
     #{$selector-darkmode} & {
         background: var(--color-gray-800);
     }
+
+    @media screen and (min-width: $breakpoint-landing-page-small) {
+        width: calc(50% - var(--horizontal-gap) / 2);
+    }
 }
 
-.examplesSectioncardImage {
+.examplesSectionCardImage {
     width: 100%;
     height: 200px;
     object-fit: none;
@@ -353,15 +350,15 @@ div.sectionContent:nth-of-type(4n + 3) {
     }
 }
 
-.examplesSectioncardDetails {
+.examplesSectionCardDetails {
     display: flex;
     flex-grow: 1;
     font-size: 16px;
     flex-direction: column;
-    padding: $spacing-size-6 $spacing-size-4 0px $spacing-size-6;
+    padding: $spacing-size-4 $spacing-size-4 0px;
 }
 
-.examplesSectioncardCta {
+.examplesSectionCardCta {
     display: flex;
     justify-content: flex-end;
     gap: $spacing-size-4;
